load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "config",
    srcs = ["config.go"],
    data = ["//config"],
    importpath = "github.com/hachibu/flipcoin/internal/config",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_burntsushi_toml//:toml",
        "@com_github_dustin_go_humanize//:go-humanize",
        "@com_github_pbnjay_memory//:memory",
    ],
)
